# rheia

./: .gitignore  Cargo.toml  README.md  minecraft_types.py  readme.md
client/: Cargo.toml
client/godot/: project.godot
client/godot/scenes/: main.tscn  main_menu.tscn
client/rust/: Cargo.toml
client/rust/src/: lib.rs  main_scene.rs
client/src/: lib.rs  logger.rs  main_scene.rs
client/src/client_scripts/: instance_scope.rs  mod.rs  resource_instance.rs  resource_manager.rs  script_instance.rs  scripts_manager.rs
client/src/console/: console_handler.rs  mod.rs
client/src/controller/: debug_info.rs  input_data.rs  mod.rs  player_controller.rs  player_movement.rs
client/src/debug/: debug_info.rs  mod.rs
client/src/entities/: position.rs
client/src/network/: client.rs
client/src/utils/: mod.rs
client/src/world/: godot_world.rs  mod.rs  physics_handler.rs  world_manager.rs
client_bevy/: Cargo.toml
client_bevy/src/: main.rs
client_bevy/src/network/: client.rs
client_bevy/src/player_controller/: controller.rs  freecam_handler.rs  mod.rs
client_bevy/src/world/: mod.rs  world_manager.rs  worlds_manager.rs
common/: Cargo.toml
common/src/: lib.rs  network.rs  network_messages.rs  utils.rs
common/src/blocks/: block_info.rs  block_type_info.rs  blocks_storage.rs  mod.rs  voxel_visibility.rs
common/src/chunks/: block_position.rs  chunk_position.rs  mod.rs  utils.rs
common/src/network/: channels.rs  client.rs  messages.rs  mod.rs  server.rs
common/src/utils/: mod.rs
honny-client/: Cargo.toml
honny-client/src/: lib.rs  main_scene.rs
honny-client/src/client_scripts/: resource_instance.rs
honny-client/src/console/: console_handler.rs
honny-client/src/controller/: body_controller.rs  input_data.rs  mod.rs  player_controller.rs  player_movement.rs
honny-client/src/debug/: debug_info.rs
honny-client/src/entities/: position.rs
honny-client/src/events/: mod.rs
honny-client/src/network/: client.rs
honny-client/src/utils/: glb.rs  mod.rs  position.rs
honny-client/src/world/: godot_world.rs  physics_handler.rs  world_manager.rs
honny-common/: Cargo.toml
honny-common/src/: lib.rs
honny-common/src/blocks/: block_type.rs  voxel_visibility.rs
honny-common/src/chunks/: chunk_position.rs
honny-common/src/network/: messages.rs  mod.rs
honny-common/src/physics/: mod.rs  physics.rs
honny-common/src/utils/: mod.rs
network/: Cargo.toml
network/src/: client.rs  lib.rs  protocol.rs  runtime_plugin.rs  server.rs
rheia-client/: Cargo.toml  README.md  windows-build.py
rheia-client-bevy/: Cargo.toml  README.md
rheia-client-bevy/src/: main.rs
rheia-client-bevy/src/client_scripts/: events.rs  mod.rs  modules.rs  resource_instance.rs  resource_manager.rs
rheia-client-bevy/src/network/: client.rs
rheia-client-bevy/src/player_controller/: controller.rs  freecam_handler.rs
rheia-client-bevy/src/utils/: bridge.rs
rheia-client-bevy/src/world/: mod.rs  world_manager.rs  worlds_manager.rs
rheia-client/src/: lib.rs  logger.rs  main_scene.rs  text_screen.rs
rheia-client/src/client_scripts/: local_loader.rs  mod.rs  resource_instance.rs  resource_manager.rs  script_instance.rs  texture_image.rs
rheia-client/src/console/: console_handler.rs
rheia-client/src/controller/: body_controller.rs  building_visualizer.rs  camera_controller.rs  controls.rs  entity_movement.rs  look_at.rs  mod.rs  player_action.rs  player_controller.rs  player_movement.rs  selected_item.rs
rheia-client/src/debug/: debug_info.rs
rheia-client/src/entities/: entities_manager.rs  entity.rs  entity_tag.rs  generic_skin.rs  mod.rs
rheia-client/src/network/: client.rs  events.rs
rheia-client/src/scenes/: connect_scene.rs  main_menu.rs  main_menu_button.rs  main_scene.rs  mod.rs  text_screen.rs
rheia-client/src/ui/: block_selection.rs  item_decription.rs  mod.rs  window.rs
rheia-client/src/utils/: bridge.rs  glb.rs  mod.rs  primitives.rs  settings.rs  world_generator.rs
rheia-client/src/world/: block_storage.rs  godot_world.rs  mod.rs  physics.rs  world_manager.rs  worlds_manager.rs
rheia-common/: Cargo.toml  README.md
rheia-common/src/: default_blocks.rs  default_blocks_ids.rs  default_resources.rs  lib.rs
rheia-common/src/blocks/: block_info.rs  block_type.rs  blocks_storage.rs  chunk_collider_info.rs  default_blocks.rs  mc.json  mod.rs  voxel_visibility.rs
rheia-common/src/chunks/: block_position.rs  chunk_data.rs  chunk_position.rs  mod.rs  position.rs  rotation.rs  utils.rs
rheia-common/src/commands/: command.rs  complitions.rs  mod.rs
rheia-common/src/network/: client.rs  messages.rs  mod.rs  server.rs
rheia-common/src/physics/: mod.rs  physics.rs
rheia-common/src/utils/: colors.rs  mod.rs  spiral_iterator.rs
rheia-common/src/world_generator/: default.rs  mod.rs  noise.rs  sphere.rs  traits.rs
rheia-common/src/world_storage/: fake_storage.rs  mod.rs  taits.rs
rheia-common/src/worlds_storage/: fake_storage.rs  mod.rs  sqlite_storage.rs  sqllite_storage.rs  taits.rs
rheia-map-preview/: Cargo.toml  README.md
rheia-map-preview/src/: generate_image.rs  gui.rs  main.rs  noise.rs
rheia-network/: Cargo.toml
rheia-network/examples/connection/: Cargo.toml  README.md
rheia-network/src/: client.rs  lib.rs  messages.rs  server.rs  utils.rs
rheia-network/src/entities/: entity_tag.rs  mod.rs
rheia-network/src/renet/: channels.rs  client.rs  mod.rs  server.rs
rheia-network/src/steamworks/: client.rs  server.rs
rheia-network/src/tokio/: client.rs  server.rs
rheia-server/: Cargo.toml  README.md
rheia-server/src/: args.rs  launch_settings.rs  logger.rs  main.rs
rheia-server/src/client_resources/: default_resources.rs  mod.rs  resource_instance.rs  resources_manager.rs  server_settings.rs
rheia-server/src/console/: colors.rs  commands_executer.rs  completer.rs  console_handler.rs  console_sender.rs  helper.rs  mod.rs
rust/: Cargo.toml
rust/src/: client_scripts.rs  console_handler.rs  lib.rs  main_scene.rs  world.rs
rust/tests/: large.schem
server/: Cargo.toml
server/src/: args.rs  logger.rs  main.rs  server.rs
(+1836 files in other folders)
