[package]
name = "honny-craft"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../common" }

godot = { git = "https://github.com/godot-rust/gdext", branch = "master"}

rand = "0.8"
lazy_static = "1.4.0"
regex = "1.7.3"
spiral = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = { version = "0.4" }

# Network
renet = "0.0.12"
tokio = { version = "1.28.0", features = ["net", "io-util", "rt-multi-thread", "sync", "macros"] }
bincode = "1.3.1"

strum = "0.24.1"
strum_macros = "0.24.3"

# Miltithread heavy tasks
rayon = "1.7"

# Async channels
crossbeam = "0.8.2"
crossbeam-channel = "0.5"

# Single thread links
send_wrapper = "0.6.0"

# Scripts
rhai = { version = "1.13.0", features = ["internals", "serde"] }

# https://github.com/bonsairobo/block-mesh-rs/blob/main/Cargo.toml
ilattice = "0.1"
ndshape = "0.3"
ndcopy = "0.3"

# Noise
bracket-lib = "~0.8"
bracket-noise = "~0.8"
bracket-random = "~0.8"

# Schematics
flate2 = "1.0"
fastnbt = "2"

image = "0.24.5"
