[package]
name = "honny-client-bevy"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
common = { path = "../common" }

bevy = { version = "0.11.2", default-features = true }
bevy_app = "0.11.2"

# ECS
bevy_ecs = "0.11.2"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
env_logger = "0.10.0"
log = { version = "0.4" }
lazy_static = "1.4.0"

# For spiral iteration
spiral = "0.1"

arrayvec = "0.7.4"
ahash = "0.8.3"
dashmap = "5.4.0"
parking_lot = "0.12.1"

# Network
renet = "0.0.13"
tokio = { version = "1.28.0", features = ["net", "io-util", "rt-multi-thread", "sync", "macros"] }
bincode = "1.3.2"

# Fast RwLock
flume = "0.10.14"

# Single thread links
send_wrapper = "0.6.0"

# Miltithread heavy tasks
rayon = "1.7"

# https://github.com/bonsairobo/block-mesh-rs/blob/main/Cargo.toml
ilattice = "0.1"
ndshape = "0.3"
ndcopy = "0.3"
