[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

# Network
renet = "0.0.11"

# Scripts
rhai = { version = "1.13.0", features = ["internals", "serde"] }

strum = "0.24.1"
strum_macros = "0.24.3"
