[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

# Network
bevy_renet = "0.0.8"
renet = "0.0.12"

# Scripts
rhai = { version = "1.13.0", features = ["internals", "serde"] }

strum = "0.24.1"
strum_macros = "0.24.3"

downcast-rs = "1.2.0"
typetag = "0.1.6"

arrayvec = "0.7.4"
