[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["network-renet", "rak-rs"]
network-renet = ["renet"]
network-rak-rs = ["rak-rs"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4" }
parking_lot = "0.12.1"
flume = "0.10.14"
ahash = "0.8.3"

# Scripts
rhai = { version = "1.13.0", features = ["internals", "serde"] }

strum = "0.24.1"
strum_macros = "0.24.3"

downcast-rs = "1.2.0"
typetag = "0.1.6"

arrayvec = "0.7.4"

bincode = "1.3.2"

# Network
renet = { version = "0.0.13", features = ["bevy"], optional = true }

rak-rs = { version = "0.3.1", default-features = false, features = [ "async_tokio", "mcpe" ], optional = true }
tokio = "1.32.0"
