[package]
name = "honny-client"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../honny-common" }

godot = { git = "https://github.com/godot-rust/gdext", branch = "master"}

rand = "0.8"
lazy_static = "1.4.0"
regex = "1.7.3"
spiral = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = { version = "0.4" }
chrono = "0.4.24"

arrayvec = "0.7.4"
ahash = "0.8.7"
dashmap = "5.5.3"
parking_lot = "0.12.1"

# Helpful macros for working with enums and strings
strum = "0.25.0"
strum_macros = "0.25.3"

# Miltithread heavy tasks
rayon = "1.8.1"

# Async channels
crossbeam = "0.8.4"
crossbeam-channel = "0.5.11"

# A blazingly fast multi-producer channel
flume = "0.11"

# Single thread links
send_wrapper = "0.6.0"

# Scripts
rhai = { version = "1.16.3", features = ["internals", "serde"] }

# https://github.com/bonsairobo/block-mesh-rs/blob/main/Cargo.toml
ilattice = "0.4.0"
ndshape = "0.3.0"
ndcopy = "0.3.0"

# Noise
bracket-lib = "0.8.7"
bracket-noise = "0.8.7"
bracket-random = "0.8.7"

# Schematics
flate2 = "1.0"
fastnbt = "2"

image = "0.24.8"
