[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["network-renet", "physics-rapier"]
network-renet = ["renet"]
physics-rapier = ["rapier3d"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4" }
parking_lot = "0.12.1"
flume = "0.10.14"
ahash = "0.8.3"

# Scripts
rhai = { version = "1.13.0", features = ["internals", "serde"] }

strum = "0.24.1"
strum_macros = "0.24.3"

downcast-rs = "1.2.0"
typetag = "0.1.6"

arrayvec = "0.7.4"

bincode = "1.3.2"

# Network
renet = { version = "0.0.13", features = ["bevy"], optional = true }

tokio = "1.32.0"

#rapier3d = { version = "0.17.2", features = [ "simd-stable" ] }
rapier3d = { path = "/home/honnisha/Projects/rapier/crates/rapier3d", features = [ "simd-stable" ], optional = true }

jolt-rs = { path = "/home/honnisha/Projects/jolt-rs" }

physx = "0.19.0"
