[package]
name = "network"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
features = [
    "serializer_bincode",
    "protocol_tcp",
    "protocol_udp",
    "client",
    "server",
]

[dependencies]
bevy = { version = "0.10.1", default-features = false }
serde = "1"
byteorder = "1"
log = "0.4.17"
bincode = { version = "1.3.2", optional = true }
dashmap = { version = "5.4.0", optional = true }
tokio = { version = "1.28.0", features = [
    "io-util",
    "rt-multi-thread",
    "sync",
    "macros",
] }
async-trait = "0.1"
futures = { version = "0.3" }

[features]
serializer_bincode = ["bincode"]
protocol_tcp = ["tokio/net"]
protocol_udp = ["tokio/net", "dashmap"]
client = []
server = []

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-futures = "0.4.29"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
