[package]
name = "rheia-client-bevy"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
common = { path = "../rheia-common" }

bevy = { version = "0.14.0", default-features = true, features = ["dynamic_linking"] }
bevy_app = "0.14.0"
bevy_ecs = "0.14.0"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
env_logger = "0.10.0"
log = { version = "0.4" }
lazy_static = "1.4.0"

# For spiral iteration
spiral = "0.1"

arrayvec = "0.7.4"
ahash = "0.8.3"
dashmap = "5.4.0"
parking_lot = "0.12.1"
strum = "0.26.3"
strum_macros = "0.26.4"

ndshape = "0.3.0"

# Network
tokio = { version = "1.41.1", features = ["net", "io-util", "rt-multi-thread", "sync", "macros"] }
bincode = "1.3.2"

# Fast RwLock
flume = "0.10.14"

# Single thread links
send_wrapper = "0.6.0"

# Miltithread heavy tasks
rayon = "1.7"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
