[package]
name = "rheia-client-bevy"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
common = { path = "../rheia-common" }
network = { path = "../rheia-network" }
physics = { path = "../rheia-physics" }

bevy = { version = "0.16", default-features = true, features = ["dynamic_linking"] }
bevy_app = "0.16"
bevy_ecs = "0.16"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
env_logger = "0.11"
log = { version = "0.4" }
lazy_static = "1.5"

# For spiral iteration
spiral = "0.2"

arrayvec = "0.7"
ahash = "0.8"
dashmap = "6.1"
parking_lot = "0.12"
strum = "0.27"
strum_macros = "0.27"

ndshape = "0.3"

# Network
tokio = { version = "1.44", features = ["net", "io-util", "rt-multi-thread", "sync", "macros"] }
bincode = "1.3"

# Fast RwLock
flume = "0.11"

# Single thread links
send_wrapper = "0.6"

# Miltithread heavy tasks
rayon = "1.10"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
