[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["network-renet", "physics-rapier"]
network-renet = ["renet"]
physics-rapier = ["rapier3d"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4.22" }
flume = "0.11.0"

# Scripts
rhai = { version = "1.19.0", features = ["internals", "serde"] }

strum = "0.26.3"
strum_macros = "0.26.4"

downcast-rs = "1.2.1"
typetag = "0.2.16"

arrayvec = "0.7.4"
ahash = "0.8.11"
parking_lot = "0.12.3"

bincode = "1.3.2"

tokio = "1.38.0"

# https://github.com/bonsairobo/block-mesh-rs/blob/main/Cargo.toml
ilattice = "0.4.0"
ndshape = "0.3.0"
ndcopy = "0.3.0"

# Network
renet = { version = "0.0.15", features = ["bevy"], optional = true }
# "debug", "debug_all"
rak-rs = { git = "https://github.com/NetrexMC/RakNet", branch = "master", optional = false, default-features = false, features = [ "async_tokio", "mcpe" ] }

# Pjysics
rapier3d = { version = "0.21.0", features = [ "simd-stable" ], optional = true }
physx = { version = "0.19.0", optional = false }
physx-sys = { version = "0.11.5", optional = false }
