[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4.22" }
flume = "0.11.0"
num = "0.4"
rand = "0.8.5"

# Scripts
rhai = { version = "1.19.0", features = ["internals", "serde"] }

strum = "0.26.3"
strum_macros = "0.26.4"

downcast-rs = "1.2.1"
typetag = "0.2.16"

arrayvec = "0.7.4"
ahash = "0.8.11"
parking_lot = "0.12.3"

bincode = "1.3.2"
miniz_oxide = "0.8.0"

# https://github.com/bonsairobo/block-mesh-rs/blob/main/Cargo.toml
ilattice = "0.4.0"
ndshape = "0.3.0"
ndcopy = "0.3.0"
