[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4.22" }
flume = "0.11.0"
num = "0.4"
rand = "0.8.5"
regex = "1.10.6"
lazy_static = "1.4.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-inline-default = "0.2"
serde_yaml = "0.9"

# Scripts
rhai = { version = "1.19.0", features = ["internals", "serde"] }

strum = "0.26"
strum_macros = "0.26"

downcast-rs = "1.2.1"
typetag = "0.2.16"

ahash = "0.8.11"
parking_lot = "0.12.3"

bincode = "1.3.2"
miniz_oxide = "0.8.0"

# https://github.com/bonsairobo/block-mesh-rs/blob/main/Cargo.toml
ilattice = "0.4.0"
ndshape = "0.3.0"
ndcopy = "0.3.0"

# Noise world gen
bracket-lib = "0.8.7"
bracket-noise = "0.8.7"
bracket-random = "0.8.7"

rusqlite = { version = "0.35.0", features = ["bundled", "blob"] }

zip = "2.6"

# For spiral iteration
spiral = "0.2"
