[package]
name = "network"
version = "0.1.0"
edition = "2021"

[features]
default = ["network-tokio"]

network-renet = ["renet"]
network-steamworks = ["steamworks"]
network-rak-rs = ["rak-rs"]
network-tokio = []

[dependencies]
common = { path = "../rheia-common" }

serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4.22" }
flume = "0.11.0"
num = "0.4"
rand = "0.8.5"

# Scripts
rhai = { version = "1.19.0", features = ["internals", "serde"] }

strum = "0.26.3"
strum_macros = "0.26.4"

downcast-rs = "1.2.1"
typetag = "0.2.16"

arrayvec = "0.7.4"
ahash = "0.8.11"
parking_lot = "0.12.3"

bincode = "1.3.2"
miniz_oxide = "0.8.0"

# https://github.com/bonsairobo/block-mesh-rs/blob/main/Cargo.toml
ilattice = "0.4.0"
ndshape = "0.3.0"
ndcopy = "0.3.0"

# Network
tokio = { version = "1.39.3", features = [ "full" ] }

renet = { version = "0.0.16", features = ["bevy"], optional = true }
steamworks = { version = "0.11.0", optional = true }
# "debug", "debug_all"
rak-rs = { git = "https://github.com/NetrexMC/RakNet", branch = "master", optional = true, default-features = false, features = [ "async_tokio", "mcpe" ] }
