[package]
name = "rheia-server"
version = "0.1.0"
edition = "2021"
publish = false

[features]
trace = []

[dependencies]
common = { path = "../rheia-common" }
network = { path = "../rheia-network" }

serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.30"
env_logger = "0.11.1"
log = { version = "0.4.20" }
lazy_static = "1.4.0"
rustyline = { version = "14.0.0", features = ["with-file-history", "derive"] }
chrono = "0.4.33"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
regex = "1.10.3"
fxhash = "0.2.1"

# For spiral iteration
spiral = "0.2.0"

arrayvec = "0.7.4"
ahash = "0.8.7"
dashmap = "5.5.3"
parking_lot = "0.12.1"
flume = "0.11.0"

bevy = { version = "0.14.0", default-features = false }
bevy_app = "0.14.0"
bevy_ecs = "0.14.0"

# Single thread links
send_wrapper = "0.6.0"

# ARGS
clap = { version = "4.4.18", features = ["string", "derive"] }

# Noise
bracket-lib = "0.8.7"
bracket-noise = "0.8.7"
bracket-random = "0.8.7"

# Schematics
flate2 = "1.0"
fastnbt = "2"

# Miltithread heavy tasks
rayon = "1.8.1"

bincode = "1.3.2"
