[package]
name = "rheia-server"
version = "0.1.0"
edition = "2021"
publish = false

[features]
trace = []

[dependencies]
common = { path = "../rheia-common" }
network = { path = "../rheia-network" }

bevy = { version = "0.17", default-features = false }
bevy_app = "0.17"
bevy_ecs = "0.17"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
env_logger = "0.11"
log = { version = "0.4" }
lazy_static = "1.5"
rustyline = { version = "15.0", features = ["with-file-history", "derive"] }
chrono = "0.4"
uuid = { version = "1.12", features = ["v4", "fast-rng"] }
fxhash = "0.2"
shellexpand = "3.1"
regex = "1.11"
tokio = { version = "1.44", features = [ "full" ] }

zip = "2.6"

ahash = "0.8"
dashmap = "6.1"
parking_lot = "0.12"
flume = "0.11"

# Single thread links
send_wrapper = "0.6"

# ARGS
clap = { version = "4.5", features = ["string", "derive"] }

# Noise
bracket-lib = "0.8"
bracket-noise = "0.8"
bracket-random = "0.8"

# Schematics
flate2 = "1.1"
fastnbt = "2"

# Miltithread heavy tasks
rayon = "1.10"

bincode = "1.3"

strum = "0.27"
strum_macros = "0.27"
