[package]
name = "honny-craft"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
rand = "0.8"

rhai = "1.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

block-mesh = "0.2.0"
