[package]
name = "honny-craft"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master"}
rand = "0.8"

strum = "0.24.1"
strum_macros = "0.24.3"

crossbeam = "0.8.2"
rayon = "1.7"
send_wrapper = "0.6.0"
lazy_static = "1.4.0"

rhai = { version = "1.13.0", features = ["internals"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# https://github.com/bonsairobo/block-mesh-rs/blob/main/Cargo.toml
ilattice = "0.1"
ndshape = "0.3"
ndcopy = "0.3"

bracket-lib = "~0.8"
bracket-noise = "~0.8"
bracket-random = "~0.8"

# Schematics
flate2 = "1.0"
fastnbt = "2"

image = "0.24.5"

regex = "1.7.3"
spiral = "0.1"
