[package]
name = "honny-craft-server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = { version = "0.4" }
lazy_static = "1.4.0"
rustyline = { version = "11.0.0", features = ["with-file-history"] }
chrono = "0.4.24"
uuid = { version = "1.3.2", features = ["v4", "fast-rng"] }

# Network
renet = "0.0.11"
bincode = "1.3.1"

bevy = { version = "0.10.1", default-features = false }
bevy_app = "0.10.1"

# ECS
bevy_ecs = "0.10.1"

# Async channels
crossbeam = "0.8.2"
crossbeam-channel = "0.5"

# Single thread links
send_wrapper = "0.6.0"

# ARGS
clap = { version = "4.2.1", features = ["string", "derive"] }

# Noise
bracket-lib = "~0.8"
bracket-noise = "~0.8"
bracket-random = "~0.8"

# Schematics
flate2 = "1.0"
fastnbt = "2"
