[package]
name = "honny-craft-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
common = { path = "../common" }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
env_logger = "0.10.0"
log = { version = "0.4" }
lazy_static = "1.4.0"
rustyline = { version = "11.0.0", features = ["with-file-history"] }
chrono = "0.4.24"
uuid = { version = "1.3.2", features = ["v4", "fast-rng"] }
regex = "1.8.4"
fxhash = "0.2.1"

# For spiral iteration
spiral = "0.1"

ahash = "0.8.3"
dashmap = "5.4.0"
parking_lot = "0.12.1"

# Network
renet = "0.0.12"
tokio = { version = "1.28.0", features = ["net", "io-util", "rt-multi-thread", "sync", "macros"] }
bincode = "1.3.2"

flume = "0.10.14"

bevy = { version = "0.10.1", default-features = false }
bevy_app = "0.10.1"

# ECS
bevy_ecs = "0.10.1"

# Single thread links
send_wrapper = "0.6.0"

# ARGS
clap = { version = "4.2.1", features = ["string", "derive"] }

# Noise
bracket-lib = "~0.8"
bracket-noise = "~0.8"
bracket-random = "~0.8"

# Schematics
flate2 = "1.0"
fastnbt = "2"

# Miltithread heavy tasks
rayon = "1.7"
