[package]
name = "network-test"
version = "0.1.0"
edition = "2021"

[dependencies]
network = { path = "../../" }

rustyline = { version = "14.0.0", features = ["with-file-history", "derive"] }
lazy_static = "1.4.0"
flume = "0.11.0"
tokio = { version = "1.41.1", features = [ "full" ] }
bincode = "1.3.2"

log = { version = "0.4" }
tracing = "0.1"
tracing-subscriber = "0.3"

# ARGS
clap = { version = "4.4.18", features = ["string", "derive"] }
